#
# Autoconf file for 2dx
#  Thu Feb  1 11:32:50 CET 2007 -- Remco Wouts
#     started
#
AC_INIT(2dx, 2.3-mpi)
AC_PREFIX_DEFAULT([/usr/local/2dx/kernel])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_FC
AC_PROG_INSTALL

#
# Some macros so we can use qmake
#
# We can use AC_CONFIG_QMAKE much like the normal AC_CONFIG_... macros
# 
# Generate the config stuff
#
AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([./mrc])

# Required
AC_OUTPUT


